 * Deprecated Drawable.draw|clean & Graph.draw|clean|getRCommand methods for legacy R graphs
 * Deprecated SampleImplementation.storeToTemporaryFile|streamToRFormat
 * Deprecated GaussianProcess.GIBBS in favor of GaussianProcess.GALLIGAOGIBBS
 * Deprecated FunctionalChaosSobolIndices::summary in favor of __str__

=== Documentation ===
 * Added example galleries at the end of API doc pages
 * Added new use case: WingWeightModel and example of use
 * Added new use case: FireSatelliteModel and example of use

=== Python module ===
 * New openturns.experimental submodule introducing newest classes until stabilization

=== Miscellaneous ===
 * Chaos for mixed variables

=== Bug fixes ===
 * #1214 (There is no example with IntegrationStrategy on a database)
 * #1333 (Polynomial chaos with mixed variables (improvement))
 * #1473 (FunctionalChaosResult should provide the used input/output samples )
 * #1568 (There is no example to bootstrap the polynomial chaos)
 * #2030 (There is no example which shows how to calibrate a model without observed inputs)
 * #2043 (Some attributes of PythonDistribution are changed during the lifecycle of the object)
 * #2058 (TruncatedNormal failure)
 * #2059 (Pb with computeConditionalPDF in KernelMixture)
 * #2064 (drop getGroupedSobolIndex(int) ?)
 * #2073 (getCenteredMoment(0))
 * #2076 (Problem in TruncatedDistribution of discrete distributions)
 * #2083 (Problem in the QQplot of a discrete distribution)
 * #2088 (Why is this library overriding the SIGINT handler?)
 * #2089 (Cannot load Python objects with large attributes in a Study)
 * #2097 (LinearModelStepwiseAlgorithm ctor order)
 * #2091 (Compressed H5 files?)
 * #2094 (getSampleAtVertex() is not robust)
 * #2095 (Triangular::computeCharacteristicfunction() produces NaNs)
 * #2098 (LinearModelStepwiseAlgorithm null basis)
 * #2101 (drop FunctionalChaosSobolIndices::summary)
 * #2103 (FunctionalChaosRandomVector notes)