@@ -37,6 +37,7 @@
  * Deprecated SampleImplementation.storeToTemporaryFile|streamToRFormat
  * Deprecated GaussianProcess.GIBBS in favor of GaussianProcess.GALLIGAOGIBBS
  * Deprecated FunctionalChaosSobolIndices::summary in favor of __str__
+ * Deprecated BoxCoxFactory::build method using collection of basis
 
 === Documentation ===
  * Added example galleries at the end of API doc pages
